<resources>
    <string name="app_name">Rent Sewa</string>
    <string name="working_please_wait">Working! Please Wait...</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="login_as_vendor">Login As Vendor</string>
    <string name="login_as_visitor">LOGIN AS VISITOR</string>
    <string name="err_user_name">Enter user name</string>
    <string name="err_enter_name">Enter Your Name!</string>
    <string name="err_pass">Enter Your Password!</string>
    <string name="err_email">Enter Your Email</string>
    <string name="err_first_name">Enter First Name!</string>
    <string name="err_status">Enter Your Status!</string>
    <string name="err_last_name">Enter Last Name!</string>
    <string name="err_phone_number">Enter Your Phone Number!</string>
    <string name="err_dob">Enter Date Of Birth!</string>
    <string name="err_re_enter_pass">Enter Second Password</string>
    <string name="err_password_mismatch">Password Mismatch!</string>
    <string name="or">or</string>
    <string name="visitor_signup">Visitor Signup</string>
    <string name="create_new_account">Create New Account</string>
    <string name="user_name">Username</string>
    <string name="your_user_name_here">Your Username Here</string>
    <string name="password">Password</string>
    <string name="your_password_here">Your password here</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="login">Login</string>
    <string name="vendor_login">Vendor Login</string>
    <string name="visitor_login">Visitor Login</string>
    <string name="your_email_address_here">Your Email Address Here</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="categories">Categories</string>
    <string name="kothi_for_rent">Kothi For Rent</string>
    <string name="view_detail">View Detail</string>
    <string name="sub_category_name">Sub Category Name</string>
    <string name="category_name">Category Name</string>
    <string name="brand">Brand</string>
    <string name="local">Local</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="added">Added</string>
    <string name="views">Views</string>
    <string name="vendor_rating">Vendor Rating</string>
    <string name="description">Description</string>
    <string name="dummy_desc">4 Bedroom kothi for rent in delta 3, Greater noida \nContact: 7812413521</string>

    <string name="product_name">Product Name</string>
    <string name="your_phone_number_here">Your Phone Number Here</string>
    <string name="your_title_here">Your Title Here</string>
    <string name="update">Update</string>
    <string name="old_password">Old Password</string>
    <string name="congratulation">Congratulation</string>

    <string name="facebook_app_id">1372825542745172</string>
    <string name="remaining_items">Remaining Items</string>
    <string name="show_all">Show All</string>
    <string name="go">Go</string>
    <string name="all_categories">All Categories</string>
    <string name="city">City</string>
    <string name="err_select_all_filters">Please Select All The Filters!</string>
    <string name="time_period">Time Period -</string>
    <string name="rs">"Rs "</string>
    <string name="products">Products</string>
    <string name="shop_name">Shop Name</string>
    <string name="your_shop_name_here">Your Shop Name Here</string>
    <string name="change_picture">Change Picture</string>
    <string name="personal_detail">Personal Detail</string>
    <string name="log_out">Log Out</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="change_password">Change Password</string>
    <string name="setting">Setting</string>
    <string name="take_picture">Take Picture</string>
    <string name="select_picture">Select Picture</string>
    <string name="contact_us">Contact Us</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="website">Website</string>
    <string name="address">Address</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="click_to_contact">Click to contact</string>
    <string name="user_profile">user_profile</string>
    <string name="call">Call</string>
    <string name="visitor_name">Visitor Name</string>
    <string name="visitor_number">Visitor Number</string>
    <string name="visitor_mail_id">Visitor Mail ID</string>
    <string name="requested">Requested</string>
    <string name="enquired">Enquired</string>
    <string name="click_to_call">Click To Call</string>
    <string name="alert">ALERT</string>
    <string name="name">Name</string>
    <string name="your_name_here">Your name here</string>
    <string name="enter_shop_name">Enter Shop Name</string>
    <string name="rent_is_new_trend">Rent is New Trend</string>
    <string name="email">Email</string>
    <string name="your_price_goes_here">Your Price Goes Here</string>
    <string name="pin_code">Pin Code</string>
    <string name="state">State</string>
    <string name="tour_pin_code_here">Your Pin Code Here</string>
    <string name="time_in_hours">Time period like :: Per Hours,Per Day</string>
    <string name="product_location">Product Location</string>
    <string name="your_nrand_here">Your Brand Here</string>
    <string name="your_address_here">Your Address Here</string>
    <string name="all_products">All Products</string>
    <string name="did_you_forgot_your_password">Did you forgot your password?</string>
    <string name="please_fill_the_details_to_get_the_password">Please fill the details to get the password</string>
    <string name="send_password">Send Password</string>
</resources>
