<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <include layout="@layout/custom_toolbar_with_white_title" />

    <include layout="@layout/logo_ui" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/fifteen_dp">

        <com.neopixl.pixlui.components.textview.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/thirty_dp"
            android:gravity="center_vertical"
            android:text="@string/user_name"
            android:textSize="@dimen/eighteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />

        <com.neopixl.pixlui.components.edittext.EditText
            android:id="@+id/usernameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/two_dp"
            android:background="@drawable/rounded_corner_light_grey"
            android:gravity="center_vertical"
            android:hint="@string/your_user_name_here"
            android:inputType="text"
            android:padding="@dimen/fifteen_dp"
            android:textSize="@dimen/sixteen_sp"
            pixlui:typeface="Roboto-Regular.ttf" />

        <com.neopixl.pixlui.components.textview.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:gravity="center_vertical"
            android:text="@string/password"
            android:textSize="@dimen/eighteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />

        <com.neopixl.pixlui.components.edittext.EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/two_dp"
            android:background="@drawable/rounded_corner_light_grey"
            android:gravity="center_vertical"
            android:hint="@string/your_password_here"
            android:inputType="text"
            android:padding="@dimen/fifteen_dp"
            android:textSize="@dimen/sixteen_sp"
            pixlui:typeface="Roboto-Regular.ttf" />

        <com.neopixl.pixlui.components.textview.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:gravity="center_vertical"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/eighteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />

        <com.neopixl.pixlui.components.button.Button
            android:id="@+id/loginBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/thirty_dp"
            android:background="@drawable/rounded_shape_blue_button"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/eighteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />

    </LinearLayout>
</LinearLayout>
