<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/productIV"
            android:layout_width="match_parent"
            android:layout_height="@dimen/one_hundred_fourty_five_dp"
            android:scaleType="fitXY"
            android:src="@drawable/property" />


        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/productTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/eight_dp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/eighteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.neopixl.pixlui.components.textview.TextView
                android:id="@+id/productPriceTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="@dimen/eight_dp"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="@dimen/twenty_sp"
                pixlui:typeface="Roboto-Medium.ttf" />


            <com.neopixl.pixlui.components.textview.TextView
                android:id="@+id/timePeriodTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/eight_dp"
                android:text="@string/time_period"
                android:textColor="@color/black"
                android:textSize="@dimen/sixteen_sp"
                pixlui:typeface="Roboto-Regular.ttf" />
        </FrameLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
