<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <include layout="@layout/logo_ui" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <com.neopixl.pixlui.components.button.Button
            android:id="@+id/loginAsVendorBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/fifteen_dp"
            android:layout_marginStart="@dimen/fifteen_dp"
            android:background="@drawable/rounded_shape_blue_button"
            android:gravity="center"
            android:text="@string/login_as_vendor"
            android:textColor="@color/white"
            android:textSize="@dimen/eighteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />

        <com.neopixl.pixlui.components.button.Button
            android:id="@+id/loginAsVisitorBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/fifteen_dp"
            android:layout_marginStart="@dimen/fifteen_dp"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:background="@drawable/rounded_shape_blue_button"
            android:gravity="center"
            android:text="@string/login_as_visitor"
            android:textColor="@color/white"
            android:textSize="@dimen/eighteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />

        <include layout="@layout/or_ui" />

        <com.neopixl.pixlui.components.button.Button
            android:id="@+id/visitorSignupBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fifteen_dp"
            android:background="@drawable/rounded_shape_white_button"
            android:gravity="center"
            android:text="@string/create_new_account"
            android:textColor="@color/black"
            android:textSize="@dimen/eighteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />
    </LinearLayout>


</FrameLayout>
