<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:orientation="vertical">

    <include layout="@layout/custom_toolbar_with_white_title" />

    <ScrollView
        android:id="@+id/contentSV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarView"
        android:layout_marginBottom="@dimen/eighty_dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/ten_dp">

            <RelativeLayout
                android:layout_width="@dimen/one_hundred_fifty_five_dp"
                android:layout_height="@dimen/one_hundred_fifty_five_dp"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/userIV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="centerCrop" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/color_primary_with_four_four" />

                <ImageView
                    android:id="@+id/changeUserImageIV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_change_profile"/>

                <com.neopixl.pixlui.components.textview.TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/changeUserImageIV"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/five_dp"
                    android:text="@string/change_picture"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fourteen_sp"
                    pixlui:typeface="Roboto-Medium.ttf" />
            </RelativeLayout>

            <com.neopixl.pixlui.components.textview.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_dp"
                android:text="@string/personal_detail"
                android:textColor="@color/white"
                android:textSize="@dimen/eighteen_sp"
                pixlui:typeface="Roboto-Medium.ttf" />

            <include layout="@layout/user_setting_form_view" />

            <include layout="@layout/horizontal_primary_color_line" />
            <com.neopixl.pixlui.components.textview.TextView
                android:id="@+id/contactUsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:drawablePadding="@dimen/five_dp"
                android:padding="@dimen/five_dp"
                android:text="@string/contact_us"
                android:textColor="@color/white"
                android:visibility="gone"
                android:textSize="@dimen/sixteen_sp"
                pixlui:typeface="Roboto-Medium.ttf" />

            <com.neopixl.pixlui.components.textview.TextView
                android:id="@+id/logoutTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:drawablePadding="@dimen/five_dp"
                android:padding="@dimen/five_dp"
                android:text="@string/log_out"
                android:textColor="@color/white"
                android:textSize="@dimen/sixteen_sp"
                pixlui:typeface="Roboto-Medium.ttf" />
        </LinearLayout>
    </ScrollView>

    <com.neopixl.pixlui.components.textview.TextView
        android:id="@+id/updateTV"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/fourty_dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="@dimen/ten_dp"
        android:background="@drawable/rounded_shape_blue_button"
        android:gravity="center"
        android:paddingLeft="@dimen/fifty_dp"
        android:paddingRight="@dimen/fifty_dp"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textSize="@dimen/eighteen_sp"
        pixlui:typeface="Roboto-Medium.ttf" />



</RelativeLayout>